# openapi-diff

./: README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: petstore-v1.yaml  petstore-v2.yaml
openapi_diff/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_diff.py
