[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-diff"
version = "0.1.0"
description = "Detect breaking changes between two OpenAPI 3.x specs, with a CI-friendly exit code."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["openapi", "swagger", "api", "breaking-changes", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=5.1"]
dev = ["pytest>=7"]

[project.scripts]
openapi-diff = "openapi_diff.cli:main"

[project.urls]
Homepage = "https://github.com/saifullah4khan/openapi-diff"

[tool.setuptools.packages.find]
include = ["openapi_diff*"]
